looking for interns

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                  From Mar. 2022 to Jul. 2022, I work at i in Ant Research as a research intern, under the supervision of Deli Zhao.
               </p>
               <p>
-<!--                <font color="red"><strong>-->
-<!--              I am seeking an (industry) research job on computer vision. Feel free to drop me an email!</strong></font>-->
+                <font color="red"><strong>
+              <strong>[08/2023] </strong> Looking for self-motivated interns in generative models in Ant Research. Please drop your CV to me if interested.</strong></font>
               </p>
               <p style="text-align:center">
                 <a href="mailto:zkechengzk@gmail.com">Email: zkechengzk@gmail.com</a> &nbsp/&nbsp
