looking for interns

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
               <p>
                  From Mar. 2022 to Jul. 2022, I work at i in Ant Research as a research intern, under the supervision of Deli Zhao.
               </p>
-              <p>
-                <font color="red"><strong>
-              <strong>[08/2023] </strong> Looking for self-motivated interns in generative models in Ant Research. Please drop your CV to me if interested.</strong></font>
-              </p>
+<!--              <p>-->
+<!--                <font color="red"><strong>-->
+<!--              <strong>[08/2023] </strong> Looking for self-motivated interns in multi-modal learning in Ant Research. Please drop your CV to me if interested.</strong></font>-->
+<!--              </p>-->
               <p style="text-align:center">
                 <a href="mailto:zkechengzk@gmail.com">Email: zkechengzk@gmail.com</a> &nbsp/&nbsp
 <!--                <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp-->
@@ -57,16 +57,17 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
-              <p><li> <font color="red"><strong>[08/2023]  Two paper accepted by ICCV 2023~</strong></font></p>
+              <p><li> <font color="red"><strong>[08/2023] Looking for self-motivated interns in multi-modal learning in Ant Research. Please drop your CV to me if interested.</strong></font></p>
+              <p><li> <font color="red"><strong>[08/2023] Two paper accepted by ICCV 2023~</strong></font></p>
               <p><li><strong>[04/2023] </strong> Two paper accepted by ICML 2023.</p>
               <p><li><strong>[02/2023] </strong> Two paper accepted by CVPR 2023.</p>
               <p><li><strong>[09/2022] </strong> Two paper accepted by NeurIPS 2023.</p>
               <p><li><strong>[05/2022] </strong> One paper accepted by ICML 2022.</p>
-              <p><li><strong>[03/2022] </strong> Three paper accepted by CVPR 2022.</p>
-              <p><li><strong>[12/2021] </strong> Two paper accepted by AAAI 2022.</p>
-              <p><li><strong>[12/2021] </strong> Awarded the National Scholarship for Doctoral Students (¥30000).</p>
-              <p><li><strong>[07/2021] </strong> One paper accepted by ACM MM 2021.</p>
-              <p><li><strong>[03/2021] </strong> Two papers accepted by CVPR 2021 (one paper as an oral presentation).</p>
+<!--              <p><li><strong>[03/2022] </strong> Three paper accepted by CVPR 2022.</p>-->
+<!--              <p><li><strong>[12/2021] </strong> Two paper accepted by AAAI 2022.</p>-->
+<!--              <p><li><strong>[12/2021] </strong> Awarded the National Scholarship for Doctoral Students (¥30000).</p>-->
+<!--              <p><li><strong>[07/2021] </strong> One paper accepted by ACM MM 2021.</p>-->
+<!--              <p><li><strong>[03/2021] </strong> Two papers accepted by CVPR 2021 (one paper as an oral presentation).</p>-->
 <!--              <p><li><strong>[12/2020] </strong> One paper accepted by AAAI 2021.</p>-->
 <!--              <p><li><strong>[11/2020] </strong> Awarded the Suzhou Industrial Park Scholarship (¥3000).</p>-->
 <!--              <p><li><strong>[07/2020] </strong> One paper accepted by ACM MM 2020.</p>-->
