--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <a href="" target="_blank">Qifeng Chen</a>,
                 <a href="https://scholar.google.com/citations?user=hMDQifQAAAAJ" target="_blank">Yujun Shen</a>
               </div>
-              <em><font color="#663399"><strong>arxiv, 2023</strong></font></em></em> &nbsp <font color="red"><strong></strong></font>
+              <em><font color="#663399"><strong>Arxiv, 2023</strong></font></em></em> &nbsp <font color="red"><strong></strong></font>
               <br>
               <div class="material">
                 <a href="https://arxiv.org/abs/2308.07926">Arxiv</a> /
@@ -137,6 +137,8 @@
                 <a href="https://pengsida.net" target="_blank">Sida Peng</a>,
                 <a href="https://scholar.google.com/citations?user=hMDQifQAAAAJ" target="_blank">Yujun Shen</a>
               </div>
+              <em><font color="#663399"><strong>Arxiv, 2023</strong></font></em></em> &nbsp <font color="red"><strong></strong></font>
+              <br>
               <div class="material">
                 <a href="https://arxiv.org/pdf/2306.12423.pdf" target="_blank">ArXiv</a> /
                 <a href="https://github.com/qiuyu96/carver" target="_blank">Code</a>
@@ -164,6 +166,8 @@
                 <a href="https://scholar.google.com/citations?user=64zxhRUAAAAJ" target="_blank">Jingren Zhou</a>,
                 <a href="https://scholar.google.com/citations?hl=zh-CN&user=K7rTHNcAAAAJ&view_op=list_works&sortby=pubdate">Yang Cao</a>
               </div>
+              <em><font color="#663399"><strong>Arxiv, 2023</strong></font></em></em> &nbsp <font color="red"><strong></strong></font>
+              <br>
               <div class="material">
                 <a href="https://arxiv.org/pdf/2305.19327.pdf" target="_blank">ArXiv</a> /
                 <a href="https://cones-page.github.io/" target="_blank">Project</a> /
@@ -171,6 +175,58 @@
               </div>
             </td>
           </tr>
+
+           <tr>
+            <td width="25%">
+              <img style="width: 100%; max-height: 100px; object-fit: cover;" src="./images/cones.png">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <div class="title">
+                Cones: Concept Neurons in Diffusion Models for Customized Generation.
+              </div>
+              <div class="author">
+                Zhiheng Liu*,
+                Ruili Feng*,
+                Kai Zhu,
+                Yifei Zhang,
+                <strong>Kecheng Zheng</strong>,
+                <a href="https://scholar.google.com/citations?user=8zksQb4AAAAJ" target="_blank">Yu Liu</a>,
+                <a href="https://sites.google.com/site/zhaodeli/" target="_blank">Deli Zhao</a>,
+                <a href="https://scholar.google.com/citations?user=64zxhRUAAAAJ" target="_blank">Jingren Zhou</a>,
+                <a href="https://scholar.google.com/citations?hl=zh-CN&user=K7rTHNcAAAAJ&view_op=list_works&sortby=pubdate">Yang Cao</a>
+              </div>
+              <em><font color="#663399"><strong>ICML, 2023</strong></font></em></em> &nbsp <font color="red"><strong>Oral Presentation!</strong></font>
+              <br>
+              <div class="material">
+                <a href="https://arxiv.org/pdf/2303.05125.pdf" target="_blank">ArXiv</a> /
+                <a href="https://github.com/damo-vilab/Cones" target="_blank">Code</a>
+              </div>
+            </td>
+          </tr>
+
+          <tr>
+            <td width="25%">
+              <img style="width: 100%; max-height: 100px; object-fit: cover;" src="./images/rleg.png">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <div class="title">
+                RLEG: Vision-Language Representation Learning with Diffusion-based Embedding Generation.
+              </div>
+              <div class="author">
+                Liming Zhao,
+                <strong>Kecheng Zheng</strong>,
+                Yun Zheng,
+                <a href="https://sites.google.com/site/zhaodeli/" target="_blank">Deli Zhao</a>,
+                <a href="https://scholar.google.com/citations?user=64zxhRUAAAAJ" target="_blank">Jingren Zhou</a>,
+              </div>
+              <em><font color="#663399"><strong>ICML, 2023</strong></font></em></em> &nbsp
+              <br>
+              <div class="material">
+                <a href="https://openreview.net/pdf?id=zBShO1Vmf0" target="_blank">ICML</a>
+              </div>
+            </td>
+          </tr>
+
 
           <tr>
             <td width="25%">
@@ -1085,6 +1141,9 @@ and to reject any of the false hypotheses in order to learn the true patterns.</
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>CodeBase</heading>
+              <p>
+                <a href=https://github.com/qiuyu96/CoDeF">CoDeF</a>, <font color="red"><strong>Github 358 star</strong></font>
+              </p>
               <p>
                 <a href="https://github.com/JDAI-CV/fast-reid">FastReID: a Pytorch Toolbox for General Instance Re-identification</a>, <font color="red"><strong>Github 1.9k+ star</strong></font>
               </p>
