add github star

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <div class="material">
                 <a href="https://arxiv.org/abs/2308.07926">Arxiv</a> /
                 <a href="https://qiuyu96.github.io/CoDeF/">Project</a> /
-                <a href="https://github.com/qiuyu96/CoDeF">Code</a>
+                <a href="https://github.com/qiuyu96/CoDeF">Code</a> <img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/qiuyu96/CoDeF?style=social">
               </div>
             </td>
           </tr>
@@ -141,7 +141,7 @@
               <br>
               <div class="material">
                 <a href="https://arxiv.org/pdf/2306.12423.pdf" target="_blank">ArXiv</a> /
-                <a href="https://github.com/qiuyu96/carver" target="_blank">Code</a>
+                <a href="https://github.com/qiuyu96/carver" target="_blank">Code</a> <img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/qiuyu96/Carver?style=social">
               </div>
             </td>
           </tr>
@@ -171,7 +171,7 @@
               <div class="material">
                 <a href="https://arxiv.org/pdf/2305.19327.pdf" target="_blank">ArXiv</a> /
                 <a href="https://cones-page.github.io/" target="_blank">Project</a> /
-                <a href="https://github.com/damo-vilab/Cones-V2" target="_blank">Code</a>
+                <a href="https://github.com/damo-vilab/Cones-V2" target="_blank">Code</a> <img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/damo-vilab/Cones-V2?style=social">
               </div>
             </td>
           </tr>
@@ -199,7 +199,7 @@
               <br>
               <div class="material">
                 <a href="https://arxiv.org/pdf/2303.05125.pdf" target="_blank">ArXiv</a> /
-                <a href="https://github.com/damo-vilab/Cones" target="_blank">Code</a>
+                <a href="https://github.com/damo-vilab/Cones" target="_blank">Code</a> <img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/damo-vilab/Cones?style=social">
               </div>
             </td>
           </tr>
@@ -277,7 +277,7 @@
               <div class="material">
                 <a href="https://arxiv.org/pdf/2307.15049" target="_blank">Arvix</a> /
                 <a href="https://wuw2019.github.io/R-AMT/" target="_blank">Project</a> /
-                <a href="https://github.com/wuw2019/R-AMT" target="_blank">Code</a>
+                <a href="https://github.com/wuw2019/R-AMT" target="_blank">Code</a><img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/wuw2019/R-AMT?style=social">
               </div>
             </td>
           </tr>
@@ -331,7 +331,7 @@
               <br>
               <div class="material">
                 <a href="https://arxiv.org/pdf/2303.10449" target="_blank">arvix</a> /
-                <a href="https://github.com/LuFan31/ET-OOD" target="_blank">Code</a>
+                <a href="https://github.com/LuFan31/ET-OOD" target="_blank">Code</a><img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/LuFan31/ET-OOD?style=social">
               </div>
             </td>
           </tr>
@@ -358,7 +358,7 @@
               <br>
               <div class="material">
                 <a href="https://openreview.net/pdf?id=AJ_flTkNFhP" target="_blank">NeurIPS</a> /
-                <a href="https://github.com/hyk1996/Rank-Diminishing-in-Deep-Neural-Networks" target="_blank">Code</a>
+                <a href="https://github.com/hyk1996/Rank-Diminishing-in-Deep-Neural-Networks" target="_blank">Code</a> <img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/hyk1996/Rank-Diminishing-in-Deep-Neural-Networks?style=social">
               </div>
             </td>
           </tr>
@@ -1142,19 +1142,19 @@ and to reject any of the false hypotheses in order to learn the true patterns.</
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>CodeBase</heading>
               <p>
-                <a href=https://github.com/qiuyu96/CoDeF">CoDeF</a>, <font color="red"><strong>Github 358 star</strong></font>
+                <a href=https://github.com/qiuyu96/CoDeF">CoDeF</a>, <img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/qiuyu96/CoDeF?style=social">
               </p>
               <p>
-                <a href="https://github.com/JDAI-CV/fast-reid">FastReID: a Pytorch Toolbox for General Instance Re-identification</a>, <font color="red"><strong>Github 1.9k+ star</strong></font>
+                <a href="https://github.com/JDAI-CV/fast-reid">FastReID: a Pytorch Toolbox for General Instance Re-identification</a>, <img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/JDAI-CV/fast-reid?style=social">
               </p>
               <p>
-                <a href="https://github.com/qiuyu96/Carver">Carver: Benchmarking and Analyzing 3D-aware Image Synthesis with a Modularized Codebase</a>, <font color="red"><strong>Github 51 star</strong></font>
+                <a href="https://github.com/qiuyu96/Carver">Carver: Benchmarking and Analyzing 3D-aware Image Synthesis with a Modularized Codebase</a>,<img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/qiuyu96/Carver?style=social">
               </p>
               <p>
-                <a href="https://github.com/damo-vilab/Cones-V2">Cones 2</a>, <font color="red"><strong>Github 401 star</strong></font>
+                <a href="https://github.com/damo-vilab/Cones-V2">Cones 2</a>, <img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/damo-vilab/Cones-V2?style=social">
               </p>
               <p>
-                <a href="https://github.com/damo-vilab/Cones">Cones</a>, <font color="red"><strong>Github 4 star</strong></font>
+                <a href="https://github.com/damo-vilab/Cones">Cones</a>, <img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/damo-vilab/Cones?style=social">
               </p>
             </td>
           </tr>
