--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               </div>
               <div class="author">
                 <a href="https://ken-ouyang.github.io" target="_blank">Hao Ouyang*</a>,
-                <a href="" target="_blank">Qiuyu Wang*</a>,
+                <a href="https://github.com/qiuyu96" target="_blank">Qiuyu Wang*</a>,
                 <a href="https://henry123-boy.github.io/" target="_blank">Yuxi Xiao*</a>,
                 <a href="" target="_blank">Qingyan Bai</a>,
                 <a href="" target="_blank">Juntao Zhang</a>,
@@ -130,7 +130,7 @@
                 Benchmarking and Analyzing 3D-aware Image Synthesis with a Modularized Codebase
               </div>
               <div class="author">
-                Qiuyu Wang,
+                <a href="https://github.com/qiuyu96" target="_blank">Qiuyu Wang*</a>,
                 <a href="https://vivianszf.github.io/" target="_blank">Zifan Shi</a>,
                 <strong>Kecheng Zheng</strong>,
                 <a href="https://justimyhxu.github.io/" target="_blank">Yinghao Xu</a>,
