--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
-              <p><li> <font color="red"><strong>[08/2023] Looking for self-motivated interns in multi-modal learning in Ant Research. Please drop your CV to me if interested.</strong></font></p>
-              <p><li> <font color="red"><strong>[08/2023] Two paper accepted by ICCV 2023~</strong></font></p>
+              <p><li> <font color="red"><strong>[10/2023] Looking for self-motivated interns in multi-modal learning in Ant Research. Please drop your CV to me if interested.</strong></font></p>
+              <p><li> <font color="red"><strong>[10/2023] Two paper accepted by NeurIPS 2023~</strong></font></p>
+              <p><li><strong>[08/2023] </strong> Two paper accepted by ICCV 2023.</p>
               <p><li><strong>[04/2023] </strong> Two paper accepted by ICML 2023.</p>
               <p><li><strong>[02/2023] </strong> Two paper accepted by CVPR 2023.</p>
               <p><li><strong>[09/2022] </strong> Two paper accepted by NeurIPS 2022.</p>
@@ -137,7 +138,7 @@
                 <a href="https://pengsida.net" target="_blank">Sida Peng</a>,
                 <a href="https://scholar.google.com/citations?user=hMDQifQAAAAJ" target="_blank">Yujun Shen</a>
               </div>
-              <em><font color="#663399"><strong>Arxiv, 2023</strong></font></em></em> &nbsp <font color="red"><strong></strong></font>
+              <em><font color="#663399"><strong>NeurIPS, 2023</strong></font></em></em> &nbsp <font color="red"><strong></strong></font>
               <br>
               <div class="material">
                 <a href="https://arxiv.org/pdf/2306.12423.pdf" target="_blank">ArXiv</a> /
@@ -166,7 +167,7 @@
                 <a href="https://scholar.google.com/citations?user=64zxhRUAAAAJ" target="_blank">Jingren Zhou</a>,
                 <a href="https://scholar.google.com/citations?hl=zh-CN&user=K7rTHNcAAAAJ&view_op=list_works&sortby=pubdate">Yang Cao</a>
               </div>
-              <em><font color="#663399"><strong>Arxiv, 2023</strong></font></em></em> &nbsp <font color="red"><strong></strong></font>
+              <em><font color="#663399"><strong>NeurIPS, 2023</strong></font></em></em> &nbsp <font color="red"><strong></strong></font>
               <br>
               <div class="material">
                 <a href="https://arxiv.org/pdf/2305.19327.pdf" target="_blank">ArXiv</a> /
