--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
-              <p><li> <font color="red"><strong>[10/2023] Looking for self-motivated interns in multi-modal learning in Ant Research. Please drop your CV to me if interested.</strong></font></p>
-              <p><li> <font color="red"><strong>[10/2023] Two paper accepted by NeurIPS 2023~</strong></font></p>
+              <p><li> <font color="red"><strong>[10/2023] Looking for self-motivated interns in multi-modal learning. Please drop your CV to me if interested.</strong></font></p>
+              <p><li> <font color="red"><strong>[03/2024] Two paper accepted by CVPR 2024~</strong></font></p>
+              <p><li><strong>[10/2023] </strong> Two paper accepted by NeurIPS 2023.</p>
               <p><li><strong>[08/2023] </strong> Two paper accepted by ICCV 2023.</p>
               <p><li><strong>[04/2023] </strong> Two paper accepted by ICML 2023.</p>
               <p><li><strong>[02/2023] </strong> Two paper accepted by CVPR 2023.</p>
