--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <strong>Kecheng Zheng</strong>,
                 <a href="" target="_blank">Xiaowei Zhou</a>,
                 <a href="" target="_blank">Qifeng Chen</a>,
-                <a href="https://scholar.google.com/citations?user=hMDQifQAAAAJ" target="_blank">Yujun Shen</a>
+                <a href="https://shenyujun.github.io/" target="_blank">Yujun Shen</a>
               </div>
               <em><font color="#663399"><strong>Arxiv, 2023</strong></font></em></em> &nbsp <font color="red"><strong></strong></font>
               <br>
@@ -137,7 +137,7 @@
                 <strong>Kecheng Zheng</strong>,
                 <a href="https://justimyhxu.github.io/" target="_blank">Yinghao Xu</a>,
                 <a href="https://pengsida.net" target="_blank">Sida Peng</a>,
-                <a href="https://scholar.google.com/citations?user=hMDQifQAAAAJ" target="_blank">Yujun Shen</a>
+                <a href="https://shenyujun.github.io/" target="_blank">Yujun Shen</a>
               </div>
               <em><font color="#663399"><strong>NeurIPS, 2023</strong></font></em></em> &nbsp <font color="red"><strong></strong></font>
               <br>
@@ -159,7 +159,7 @@
               <div class="author">
                 Zhiheng Liu*,
                 Yifei Zhang*,
-                <a href="https://scholar.google.com/citations?user=hMDQifQAAAAJ" target="_blank">Yujun Shen</a>,
+                <a href="https://shenyujun.github.io/" target="_blank">Yujun Shen</a>,
                 <strong>Kecheng Zheng</strong>,
                 Kai Zhu,
                 Ruili Feng,
@@ -272,7 +272,7 @@
                 <a href="https://sites.google.com/site/zhaodeli/" target="_blank">Deli Zhao</a>,
                 <a href="https://dblp.uni-trier.de/search?q=zheng-jun+zha/">Zheng-jun Zha</a>,
                 <a href="" target="_blank">Wei Chen</a>,
-                <a href="https://scholar.google.com/citations?user=hMDQifQAAAAJ" target="_blank">Yujun Shen</a>
+                <a href="https://shenyujun.github.io/" target="_blank">Yujun Shen</a>
               </div>
               <em><font color="#663399"><strong>ICCV, 2023</strong></font></em></em> &nbsp <font color="red"><strong></strong></font>
               <br>
@@ -298,7 +298,7 @@
                 Ruili Feng,
                 <strong>Kecheng Zheng</strong>,
                 Kai Zhu,
-                <a href="https://scholar.google.com/citations?user=hMDQifQAAAAJ" target="_blank">Yujun Shen</a>,
+                <a href="https://shenyujun.github.io/" target="_blank">Yujun Shen</a>,
                 Jian Zhao,
                 <a href="https://scholar.google.com/citations?user=lHb5gzoAAAAJ" target="_blank">Yukun Huang</a>,
                 <a href="https://sites.google.com/site/zhaodeli/" target="_blank">Deli Zhao</a>,
