--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,7 @@ and to reject any of the false hypotheses in order to learn the true patterns.</
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>CodeBase</heading>
               <p>
-                <a href=https://github.com/qiuyu96/CoDeF">CoDeF</a>, <img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/qiuyu96/CoDeF?style=social">
+                <a href="https://github.com/qiuyu96/CoDeF">CoDeF</a>, <img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/qiuyu96/CoDeF?style=social">
               </p>
               <p>
                 <a href="https://github.com/JDAI-CV/fast-reid">FastReID: a Pytorch Toolbox for General Instance Re-identification</a>, <img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/JDAI-CV/fast-reid?style=social">
