--- a/index.html
+++ b/index.html
@@ -57,14 +57,15 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
-              <p><li> <font color="red"><strong>[10/2023] Looking for self-motivated interns in multi-modal learning. Please drop your CV to me if interested.</strong></font></p>
-              <p><li> <font color="red"><strong>[03/2024] Two paper accepted by CVPR 2024~</strong></font></p>
+<!--               <p><li> <font color="red"><strong>[10/2023] Looking for self-motivated interns in multi-modal learning. Please drop your CV to me if interested.</strong></font></p> -->
+              <p><li> <font color="red"><strong>[06/2024] Four paper accepted by ECCV 2024~</strong></font></p>
+              <p><li><strong>[03/2024] </strong> Two paper accepted by CVPR 2024</p>
               <p><li><strong>[10/2023] </strong> Two paper accepted by NeurIPS 2023.</p>
               <p><li><strong>[08/2023] </strong> Two paper accepted by ICCV 2023.</p>
               <p><li><strong>[04/2023] </strong> Two paper accepted by ICML 2023.</p>
               <p><li><strong>[02/2023] </strong> Two paper accepted by CVPR 2023.</p>
-              <p><li><strong>[09/2022] </strong> Two paper accepted by NeurIPS 2022.</p>
-              <p><li><strong>[05/2022] </strong> One paper accepted by ICML 2022.</p>
+<!--              <p><li><strong>[09/2022] </strong> Two paper accepted by NeurIPS 2022.</p>
+<!--              <p><li><strong>[05/2022] </strong> One paper accepted by ICML 2022.</p> --> -->
 <!--              <p><li><strong>[03/2022] </strong> Three paper accepted by CVPR 2022.</p>-->
 <!--              <p><li><strong>[12/2021] </strong> Two paper accepted by AAAI 2022.</p>-->
 <!--              <p><li><strong>[12/2021] </strong> Awarded the National Scholarship for Doctoral Students (¥30000).</p>-->
