--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
 <!--               <p><li> <font color="red"><strong>[10/2023] Looking for self-motivated interns in multi-modal learning. Please drop your CV to me if interested.</strong></font></p> -->
-              <p><li> <font color="red"><strong>[11/2024] Three papers accepted by NeurIPS 2024~</strong></font></p>
+              <p><li> <font color="red"><strong>[02/2025] Three papers accepted by ICLR 2025~</strong></font></p>
+              <p><li><strong>[11/2024] </strong> Three papers accepted by NeurIPS 2024~</p>
               <p><li><strong>[06/2024] </strong> Four papers accepted by ECCV 2024~</p>
-              <p><li><strong>[03/2024] </strong> Two papers accepted by CVPR 2024</p>
+              <p><li><strong>[03/2024] </strong> Two papers accepted by CVPR 2024.</p>
               <p><li><strong>[10/2023] </strong> Two papers accepted by NeurIPS 2023.</p>
               <p><li><strong>[08/2023] </strong> Two papers accepted by ICCV 2023.</p>
               <p><li><strong>[04/2023] </strong> Two papers accepted by ICML 2023.</p>
